RESOLVED FIXED31443
[V8] De-inline simple get/set methods completely, and optimize error handling
https://bugs.webkit.org/show_bug.cgi?id=31443
Summary [V8] De-inline simple get/set methods completely, and optimize error handling
Jens Alfke
Reported 2009-11-12 15:42:25 PST
Getters and setter methods on Element classes that return strings can be optimized into a single function call that just takes the V8 parameters and the QualifiedName of the attribute (and the new value, for the setter.) I've also thrown in a small optimization to the event handling that avoids multiple calls to V8Proxy::setDOMException in a single method.
Attachments
patch (8.36 KB, patch)
2009-11-12 16:05 PST, Jens Alfke
dglazkov: review+
Jens Alfke
Comment 1 2009-11-12 16:05:15 PST
Dimitri Glazkov (Google)
Comment 2 2009-11-12 16:07:03 PST
Comment on attachment 43112 [details] patch sounds good.
Jens Alfke
Comment 3 2009-11-12 16:24:01 PST
Committed revision 50914.
Note You need to log in before you can comment on or make changes to this bug.