The last of the V8 binding optimizations. - Replace string-valued element accessors with a shared getter/setter function. - Change error handling flow of control to avoid extra branches and function calls. https://bugs.webkit.org/show_bug.cgi?id=31443

Reviewed by Dimitri Glazkov.

* bindings/scripts/CodeGeneratorV8.pm:
* bindings/v8/V8Binding.cpp:
(WebCore::getElementStringAttr):  Body of string-valued Element getter function.
(WebCore::setElementStringAttr):  Body of string-valued Element setter function.
* bindings/v8/V8Binding.h:



Canonical link: https://commits.webkit.org/42343@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50914 268f45cc-cd09-0410-ab3c-d52691b4dbfc